PROJECT(MagickCore C)

IF(WINDOWS)
  SET(MAGICKCORE_PLATFORM_SRCS
  #headers
  nt-base.h
  nt-base-private.h
  nt-feature.h
  #sources
  nt-base.c
  nt-feature.c
  )
ENDIF()

#TODO when X11 is available need to include other files for certain

SET(MAGICKCORE_BASE_SRCS
#headers
MagickCore.h
accelerate-kernels-private.h
accelerate-private.h
animate.h
annotate.h
artifact.h
attribute.h
blob.h
blob-private.h
cache.h
cache-private.h
cache-view.h
channel.h
cipher.h
client.h
coder.h
color.h
color-private.h
colormap.h
colormap-private.h
colorspace.h
colorspace-private.h
compare.h
composite.h
composite-private.h
compress.h
configure.h
constitute.h
decorate.h
delegate.h
delegate-private.h
deprecate.h
display.h
display-private.h
distort.h
distribute-cache.h
distribute-cache-private.h
draw.h
draw-private.h
effect.h
enhance.h
exception.h
exception-private.h
feature.h
fourier.h
fx.h
fx-private.h
gem.h
gem-private.h
geometry.h
histogram.h
identify.h
image.h
image-private.h
image-view.h
layer.h
linked-list.h
list.h
locale_.h
log.h
magic.h
magick.h
magick-baseconfig.h
magick-config.h
magick-type.h
matrix.h
matrix-private.h
memory_.h
memory-private.h
method-attribute.h
methods.h
mime.h
module.h
monitor.h
monitor-private.h
montage.h
morphology.h
morphology-private.h
nt-base.h
nt-base-private.h
nt-feature.h
opencl.h
opencl-private.h
option.h
option-private.h
paint.h
pixel.h
pixel-accessor.h
pixel-private.h
policy.h
prepress.h
property.h
profile.h
quantize.h
quantum.h
quantum-private.h
random_.h
random-private.h
registry.h
resample.h
resample-private.h
resize.h
resize-private.h
resource_.h
resource-private.h
segment.h
semaphore.h
semaphore-private.h
shear.h
signature.h
signature-private.h
splay-tree.h
static.h
statistic.h
stream.h
stream-private.h
string_.h
string-private.h
studio.h
thread_.h
thread-private.h
timer.h
token.h
token-private.h
transform.h
threshold.h
type.h
utility.h
utility-private.h
version.h
version-private.h
vision.h
widget.h
widget-private.h
xml-tree.h
xml-tree-private.h
xwindow.h

#sources
accelerate.c
animate.c
animate-private.h
annotate.c
artifact.c
attribute.c
blob.c
cache.c
cache-view.c
channel.c
cipher.c
client.c
coder.c
color.c
colormap.c
colorspace.c
compare.c
composite.c
compress.c
configure.c
constitute.c
decorate.c
delegate.c
deprecate.c
display.c
distort.c
distribute-cache.c
draw.c
effect.c
enhance.c
exception.c
feature.c
fourier.c
fx.c
gem.c
geometry.c
histogram.c
identify.c
image.c
image-view.c
layer.c
linked-list.c
list.c
locale.c
log.c
magic.c
magick.c
matrix.c
memory.c
mime.c
module.c
monitor.c
montage.c
morphology.c
opencl.c
option.c
paint.c
pixel.c
policy.c
prepress.c
property.c
profile.c
profile-private.h
quantize.c
quantum.c
quantum-export.c
quantum-import.c
random.c
registry.c
resample.c
resize.c
resource.c
segment.c
semaphore.c
shear.c
signature.c
splay-tree.c
static.c
statistic.c
stream.c
string.c
thread.c
timer.c
token.c
transform.c
threshold.c
type.c
utility.c
version.c
vision.c
widget.c
xml-tree.c
xwindow.c
nt-feature.c
nt-base.c
)

ADD_LIBRARY(magickcore STATIC ${MAGICKCORE_BASE_SRCS} ${MAGICKCORE_PLATFORM_SRCS})
TARGET_INCLUDE_DIRECTORIES(magickcore PUBLIC ${IMAGEMAGICK_BASE_PATH})
TARGET_INCLUDE_DIRECTORIES(magickcore PRIVATE  ${IMAGEMAGICK_DELEGATES_INCLUDE_DIRS})
# Set the MAGICKCORE_QUANTUM_DEPTH to 16, this also avoids build being unsuccessful on MSVC by using of preprocessor #warning
# Seems that this must always be set MAGICKCORE_HDRI_ENABLE now or it will give preprocessor compile error
# Seems we need to define _LIB if we want to build statically
# Set the MAGICKCORE_SHAREARCH_BASEDIRNAME to "config", not sure if I should add it to the <config.h>
# Set LZMA_API_STATIC because we are using a static lzma library
TARGET_COMPILE_DEFINITIONS(magickcore PRIVATE -DMAGICKCORE_QUANTUM_DEPTH=16 -DMAGICKCORE_HDRI_ENABLE -D_LIB -DMAGICKCORE_SHAREARCH_BASEDIRNAME=\"config\" -DLZMA_API_STATIC)

